[package]
name = "prospero"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Discord dependencies
poise = "0.6.1-rc1"
serenity = { version = "0.12", default-features = false, features = [
  "cache", "voice", "rustls_backend"
] }
songbird = "0.4"
symphonia = { version = "0.5", default-features = false, features = [
  "pcm", "mkv", "wav", "mp3"
] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
