[package]
name = "prospero"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
# General
anyhow = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Discord dependencies
async-trait = "0.1"
poise = "0.6.1"
serenity = { version = "0.12", default-features = true, features = [
  "cache", "voice", "rustls_backend", "builder"
] }
songbird = { version = "0.4", features = ["builtin-queue"] }
symphonia = { version = "0.5", default-features = false, features = [
  "pcm", "mkv", "wav", "mp3"
] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
